docs(skills): note Draw.io MCP instant preview for pactkit-draw

--- a/content/docs/skills.mdx
+++ b/content/docs/skills.mdx
@@ -75,6 +75,8 @@ Deep code tracing and execution flow analysis. Produces Mermaid sequence diagram
 
 Generate Draw.io XML architecture diagrams. Supports architecture, dataflow, and deployment diagram types.
 
+When Draw.io MCP server is available, diagrams open instantly in the editor for interactive editing.
+
 ```
 /pactkit-draw "System architecture overview"
 ```
